add switch off in professional-hosting

--- a/pages/professional-hosting.html
+++ b/pages/professional-hosting.html
@@ -768,7 +768,7 @@
                                             aria-labelledby="email_removal_whitelist_switch--label"
                                             aria-describedby="email_removal_whitelist_switch--subtitle"
                                             type="button"
-                                            class="_17y21tl"
+                                            class="_17y21tl mb-1"
                                           >
                                             <input
                                               type="hidden"
@@ -804,6 +804,75 @@
                                               </div>
                                               <div class="_zsj5a1p">
                                                 <div class="_1est833r">
+                                                  <svg
+                                                    viewBox="0 0 52 52"
+                                                    fill="currentColor"
+                                                    fill-opacity="0"
+                                                    stroke="currentColor"
+                                                    stroke-width="3"
+                                                    focusable="false"
+                                                    aria-hidden="true"
+                                                    role="presentation"
+                                                    stroke-linecap="round"
+                                                    stroke-linejoin="round"
+                                                    style="
+                                                      height: 30px;
+                                                      width: 30px;
+                                                      display: block;
+                                                      overflow: visible;
+                                                    "
+                                                  >
+                                                    <path
+                                                      d="m19.1 19.1 l14 14 m 0 -14 l -14 14"
+                                                    ></path>
+                                                  </svg>
+                                                </div>
+                                              </div>
+                                            </div>
+                                          </button>
+                                          <button
+                                            id="email_removal_whitelist_switch"
+                                            role="checkbox"
+                                            aria-checked="true"
+                                            aria-labelledby="email_removal_whitelist_switch--label"
+                                            aria-describedby="email_removal_whitelist_switch--subtitle"
+                                            type="button"
+                                            class="_17y21tl"
+                                          >
+                                            <input
+                                              type="hidden"
+                                              name="email removal whitelist switch"
+                                              value="true"
+                                            />
+                                            <div class="_1nqg52lg"></div>
+                                            <div class="_v76fopi">
+                                              <div class="_1mfsr54">
+                                                <div class="_1m1auhrh"></div>
+                                                <svg
+                                                  viewBox="0 0 52 52"
+                                                  fill="currentColor"
+                                                  fill-opacity="0"
+                                                  stroke="currentColor"
+                                                  stroke-width="3"
+                                                  focusable="false"
+                                                  aria-hidden="true"
+                                                  role="presentation"
+                                                  stroke-linecap="round"
+                                                  stroke-linejoin="round"
+                                                  style="
+                                                    height: 30px;
+                                                    width: 30px;
+                                                    display: block;
+                                                    overflow: visible;
+                                                  "
+                                                >
+                                                  <path
+                                                    d="m19.1 25.2 4.7 6.2 12.1-11.2"
+                                                  ></path>
+                                                </svg>
+                                              </div>
+                                              <div class="_1abyqs14">
+                                                <div class="_pna3r">
                                                   <svg
                                                     viewBox="0 0 52 52"
                                                     fill="currentColor"
