add inline edit form, learn more modal in profle

--- a/pages/reviews-tell-us.html
+++ b/pages/reviews-tell-us.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="../css/base.css" />
     <link rel="stylesheet" href="css/reviews-tell-us.css" />
+    <link rel="stylesheet" href="../css/components.css" />
+
     <title>Write a public review for Jose Angelo - Airbnb</title>
   </head>
   <body class="with-new-header">
