add form toggle public response in profile-reviews

--- a/pages/profile-reviews.html
+++ b/pages/profile-reviews.html
@@ -605,6 +605,7 @@
                                     <button
                                       type="submit"
                                       class="btn btn-primary pull-right"
+                                      id="submit-public-response"
                                     >
                                       Submit
                                     </button>
