add filter modal for mobile homepage

--- a/guestPages/homepage.html
+++ b/guestPages/homepage.html
@@ -17909,8 +17909,12 @@
                                               <label
                                                 for="filterItem-5270712849037773927-checkbox-room_types-Entire_home_apt-row-checkbox"
                                                 class="_13xlah4"
-                                                ><div class="_jro6t0">
-                                                  <div class="_7ytxmo">
+                                                ><div
+                                                  class="_jro6t0 row-reverse-xs"
+                                                >
+                                                  <div
+                                                    class="_7ytxmo place-type-check place-type-check"
+                                                  >
                                                     <span class="_10ndlvp"
                                                       ><input
                                                         name="Entire place"
@@ -17955,8 +17959,12 @@
                                               <label
                                                 for="filterItem-5270712849037773927-checkbox-room_types-Private_room-row-checkbox"
                                                 class="_13xlah4"
-                                                ><div class="_jro6t0">
-                                                  <div class="_7ytxmo">
+                                                ><div
+                                                  class="_jro6t0 row-reverse-xs"
+                                                >
+                                                  <div
+                                                    class="_7ytxmo place-type-check place-type-check"
+                                                  >
                                                     <span class="_10ndlvp"
                                                       ><input
                                                         name="Private room"
@@ -18003,8 +18011,12 @@
                                               <label
                                                 for="filterItem-5270712849037773927-checkbox-room_types-Shared_room-row-checkbox"
                                                 class="_13xlah4"
-                                                ><div class="_jro6t0">
-                                                  <div class="_7ytxmo">
+                                                ><div
+                                                  class="_jro6t0 row-reverse-xs"
+                                                >
+                                                  <div
+                                                    class="_7ytxmo place-type-check place-type-check"
+                                                  >
                                                     <span class="_10ndlvp"
                                                       ><input
                                                         name="Shared room"
@@ -18051,6 +18063,7 @@
                             <div
                               data-plugin-in-point-id="FILTER_SECTION_CONTAINER:ROOMS_AND_BEDS_WITH_SUBCATEGORY:TAB_8225"
                               data-section-id="FILTER_SECTION_CONTAINER:ROOMS_AND_BEDS_WITH_SUBCATEGORY:TAB_8225"
+                              class="overflow-x-hidden"
                             >
                               <div class="_le6wlg">
                                 <div
@@ -18976,7 +18989,9 @@
                                                     class="a8jt5op dir dir-ltr"
                                                   ></span>
                                                 </div>
-                                                <div class="_19dpbcv">
+                                                <div
+                                                  class="_19dpbcv property-type-grid"
+                                                >
                                                   <div class="_1doy7q3">
                                                     <button
                                                       class="_1h52lk5"
@@ -19224,8 +19239,12 @@
                                                 <label
                                                   for="filterItem-5974733398519785839-checkbox-amenities-4-row-checkbox"
                                                   class="_13xlah4"
-                                                  ><div class="_jro6t0">
-                                                    <div class="_7ytxmo">
+                                                  ><div
+                                                    class="_jro6t0 row-reverse-xs"
+                                                  >
+                                                    <div
+                                                      class="_7ytxmo place-type-check"
+                                                    >
                                                       <span class="_10ndlvp"
                                                         ><input
                                                           name="Wifi"
@@ -19263,8 +19282,12 @@
                                                 <label
                                                   for="filterItem-5974733398519785839-checkbox-amenities-8-row-checkbox"
                                                   class="_13xlah4"
-                                                  ><div class="_jro6t0">
-                                                    <div class="_7ytxmo">
+                                                  ><div
+                                                    class="_jro6t0 row-reverse-xs"
+                                                  >
+                                                    <div
+                                                      class="_7ytxmo place-type-check"
+                                                    >
                                                       <span class="_10ndlvp"
                                                         ><input
                                                           name="Kitchen"
@@ -19302,8 +19325,12 @@
                                                 <label
                                                   for="filterItem-5974733398519785839-checkbox-amenities-33-row-checkbox"
                                                   class="_13xlah4"
-                                                  ><div class="_jro6t0">
-                                                    <div class="_7ytxmo">
+                                                  ><div
+                                                    class="_jro6t0 row-reverse-xs"
+                                                  >
+                                                    <div
+                                                      class="_7ytxmo place-type-check"
+                                                    >
                                                       <span class="_10ndlvp"
                                                         ><input
                                                           name="Washer"
@@ -19341,8 +19368,12 @@
                                                 <label
                                                   for="filterItem-5974733398519785839-checkbox-amenities-34-row-checkbox"
                                                   class="_13xlah4"
-                                                  ><div class="_jro6t0">
-                                                    <div class="_7ytxmo">
+                                                  ><div
+                                                    class="_jro6t0 row-reverse-xs"
+                                                  >
+                                                    <div
+                                                      class="_7ytxmo place-type-check"
+                                                    >
                                                       <span class="_10ndlvp"
                                                         ><input
                                                           name="Dryer"
@@ -19380,8 +19411,12 @@
                                                 <label
                                                   for="filterItem-5974733398519785839-checkbox-amenities-5-row-checkbox"
                                                   class="_13xlah4"
-                                                  ><div class="_jro6t0">
-                                                    <div class="_7ytxmo">
+                                                  ><div
+                                                    class="_jro6t0 row-reverse-xs"
+                                                  >
+                                                    <div
+                                                      class="_7ytxmo place-type-check"
+                                                    >
                                                       <span class="_10ndlvp"
                                                         ><input
                                                           name="Air conditioning"
@@ -19419,8 +19454,12 @@
                                                 <label
                                                   for="filterItem-5974733398519785839-checkbox-amenities-30-row-checkbox"
                                                   class="_13xlah4"
-                                                  ><div class="_jro6t0">
-                                                    <div class="_7ytxmo">
+                                                  ><div
+                                                    class="_jro6t0 row-reverse-xs"
+                                                  >
+                                                    <div
+                                                      class="_7ytxmo place-type-check"
+                                                    >
                                                       <span class="_10ndlvp"
                                                         ><input
                                                           name="Heating"
@@ -19641,8 +19680,12 @@
                                                 <label
                                                   for="filterItem--8436613862514073199-checkbox-amenities-110-row-checkbox"
                                                   class="_13xlah4"
-                                                  ><div class="_jro6t0">
-                                                    <div class="_7ytxmo">
+                                                  ><div
+                                                    class="_jro6t0 row-reverse-xs"
+                                                  >
+                                                    <div
+                                                      class="_7ytxmo place-type-check"
+                                                    >
                                                       <span class="_10ndlvp"
                                                         ><input
                                                           name="Step-free guest entrance"
@@ -19680,8 +19723,12 @@
                                                 <label
                                                   for="filterItem--8436613862514073199-checkbox-amenities-111-row-checkbox"
                                                   class="_13xlah4"
-                                                  ><div class="_jro6t0">
-                                                    <div class="_7ytxmo">
+                                                  ><div
+                                                    class="_jro6t0 row-reverse-xs"
+                                                  >
+                                                    <div
+                                                      class="_7ytxmo place-type-check"
+                                                    >
                                                       <span class="_10ndlvp"
                                                         ><input
                                                           name="Guest entrance wider than 32 inches"
@@ -19720,8 +19767,12 @@
                                                 <label
                                                   for="filterItem--8436613862514073199-checkbox-amenities-114-row-checkbox"
                                                   class="_13xlah4"
-                                                  ><div class="_jro6t0">
-                                                    <div class="_7ytxmo">
+                                                  ><div
+                                                    class="_jro6t0 row-reverse-xs"
+                                                  >
+                                                    <div
+                                                      class="_7ytxmo place-type-check"
+                                                    >
                                                       <span class="_10ndlvp"
                                                         ><input
                                                           name="Accessible parking spot"
@@ -19759,8 +19810,12 @@
                                                 <label
                                                   for="filterItem--8436613862514073199-checkbox-amenities-112-row-checkbox"
                                                   class="_13xlah4"
-                                                  ><div class="_jro6t0">
-                                                    <div class="_7ytxmo">
+                                                  ><div
+                                                    class="_jro6t0 row-reverse-xs"
+                                                  >
+                                                    <div
+                                                      class="_7ytxmo place-type-check"
+                                                    >
                                                       <span class="_10ndlvp"
                                                         ><input
                                                           name="Step-free path to the guest entrance"
@@ -19972,8 +20027,12 @@
                                                 <label
                                                   for="filterItem-7277503327663178594-checkbox-languages-1-row-checkbox"
                                                   class="_13xlah4"
-                                                  ><div class="_jro6t0">
-                                                    <div class="_7ytxmo">
+                                                  ><div
+                                                    class="_jro6t0 row-reverse-xs"
+                                                  >
+                                                    <div
+                                                      class="_7ytxmo place-type-check"
+                                                    >
                                                       <span class="_10ndlvp"
                                                         ><input
                                                           name="English"
@@ -20011,8 +20070,12 @@
                                                 <label
                                                   for="filterItem-7277503327663178594-checkbox-languages-2-row-checkbox"
                                                   class="_13xlah4"
-                                                  ><div class="_jro6t0">
-                                                    <div class="_7ytxmo">
+                                                  ><div
+                                                    class="_jro6t0 row-reverse-xs"
+                                                  >
+                                                    <div
+                                                      class="_7ytxmo place-type-check"
+                                                    >
                                                       <span class="_10ndlvp"
                                                         ><input
                                                           name="French"
@@ -20050,8 +20113,12 @@
                                                 <label
                                                   for="filterItem-7277503327663178594-checkbox-languages-4-row-checkbox"
                                                   class="_13xlah4"
-                                                  ><div class="_jro6t0">
-                                                    <div class="_7ytxmo">
+                                                  ><div
+                                                    class="_jro6t0 row-reverse-xs"
+                                                  >
+                                                    <div
+                                                      class="_7ytxmo place-type-check"
+                                                    >
                                                       <span class="_10ndlvp"
                                                         ><input
                                                           name="German"
@@ -20089,8 +20156,12 @@
                                                 <label
                                                   for="filterItem-7277503327663178594-checkbox-languages-8-row-checkbox"
                                                   class="_13xlah4"
-                                                  ><div class="_jro6t0">
-                                                    <div class="_7ytxmo">
+                                                  ><div
+                                                    class="_jro6t0 row-reverse-xs"
+                                                  >
+                                                    <div
+                                                      class="_7ytxmo place-type-check"
+                                                    >
                                                       <span class="_10ndlvp"
                                                         ><input
                                                           name="Japanese"
