--- a/pages/help.html
+++ b/pages/help.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="../css/base.css" />
-    <link rel="stylesheet" href="../css/utilities.css" />
+    <link rel="stylesheet" href="../assets/css/base.css" />
+    <link rel="stylesheet" href="../assets/css/utilities.css" />
     <link rel="stylesheet" href="css/help.css" />
-    <link rel="stylesheet" href="../css/layouts.css" />
+    <link rel="stylesheet" href="../assets/css/layouts.css" />
     <title>Home - Airbnb Help Center</title>
   </head>
   <body class="with-new-header">
