--- a/pages/invite-friends.html
+++ b/pages/invite-friends.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="../css/base.css" />
-    <link rel="stylesheet" href="../css/utilities.css" />
+    <link rel="stylesheet" href="../assets/css/base.css" />
+    <link rel="stylesheet" href="../assets/css/utilities.css" />
     <link rel="stylesheet" href="css/invite-friends.css" />
-    <link rel="stylesheet" href="../css/layouts.css" />
-    <link rel="stylesheet" href="../css/components.css" />
+    <link rel="stylesheet" href="../assets/css/layouts.css" />
+    <link rel="stylesheet" href="../assets/css/components.css" />
     <title>Airbnb Coupon Codes: Invite Your Friends</title>
   </head>
   <body class="with-new-header">
