--- a/pages/payments/guest-contributions.html
+++ b/pages/payments/guest-contributions.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="../../css/base.css" />
-    <link rel="stylesheet" href="../../css/utilities.css" />
+    <link rel="stylesheet" href="../../assets/css/base.css" />
+    <link rel="stylesheet" href="../../assets/css/utilities.css" />
     <link rel="stylesheet" href="css/payments.css" />
-    <link rel="stylesheet" href="../../css/layouts.css" />
+    <link rel="stylesheet" href="../../assets/css/layouts.css" />
     <title>Guest contributions - Account settings - Airbnb</title>
   </head>
   <body class="with-new-header">
