--- a/pages/reviews.html
+++ b/pages/reviews.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="../css/base.css" />
-    <link rel="stylesheet" href="../css/utilities.css" />
+    <link rel="stylesheet" href="../assets/css/base.css" />
+    <link rel="stylesheet" href="../assets/css/utilities.css" />
     <link rel="stylesheet" href="css/reviews.css" />
     <title>Write a public review for Jose Angelo - Airbnb</title>
   </head>
