--- a/pages/wishlist.html
+++ b/pages/wishlist.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>1st Wishlist · Wishlists - Airbnb</title>
-    <link rel="stylesheet" href="../css/base.css" />
-    <link rel="stylesheet" href="../css/utilities.css">
+    <link rel="stylesheet" href="../assets/css/base.css" />
+    <link rel="stylesheet" href="../assets/css/utilities.css">
     <link rel="stylesheet" href="css/wishlist.css" />
   </head>
   <body class="with-new-header">
